resume/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: resume
  name: resume-deployment
  namespace: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resume
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: resume
    spec:
      containers:
        - env:
            - name: GITSYNC_REPO
              value: "https://github.com/sachiniyer/resume.git"
            - name: GITSYNC_BRANCH
              value: master
            - name: GITSYNC_ROOT
              value: "/git/html"
            - name: GITSYNC_DEST
              value: /git/html
            - name: GITSYNC_WAIT
              value: "100"
            - name: GITSYNC_HTTP_BIND
              value: "0.0.0.0:90"
            - name: GITSYNC_WEBHOOK_SYNC
              value: "1"
            - name: GITSYNC_WEBHOOK_SYNC_URI
              value: "/ressync"
          image: sachiyer/git-sync:latest
          imagePullPolicy: Always
          name: git-sync
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /git
              name: nginx
        - image: nginx
          imagePullPolicy: Always
          name: resume-nginx
          ports:
            - containerPort: 80
              name: web
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /usr/share/nginx/
              name: nginx
            - mountPath: /etc/nginx/conf.d/default.conf
              name: conf
              subPath: nginx-docs.conf
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - emptyDir: {}
          name: nginx
        - configMap:
            defaultMode: 420
            name: resume-website
          name: conf
