resume/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: nginx
  name: resume-service
  namespace: website
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: resume
  sessionAffinity: None
  type: ClusterIP
