resume/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resume-ingress
  namespace: website
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: website-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: sachiniyer.com
      http:
        paths:
          - path: /ressync
            pathType: Prefix
            backend:
              service:
                name: resume-service
                port:
                  number: 90
          - path: /resume
            pathType: Prefix
            backend:
              service:
                name: resume-service
                port:
                  number: 80
  tls:
    - secretName: website-cert
